feat: Introduce Pi AI Studio V2 and new features
Adds the "Pi AI Studio V2" name and updates dependencies to include framer-motion.
Introduces new styling for fonts and animations in index.html.
Expands type definitions in types.ts to include 'Look' and 'Trend' modes, along with specific enum types for them.
Adds new constants for 'LOOK_MODES', 'TREND_MODES', 'LOOKBOOK_STYLES', and 'LOOKBOOK_PROMPTS' in constants.ts.
Enhances geminiService.ts by adding a `generateText` function and modifying `editImage` to accept optional masks and correctly handle prompt order.
Updates README.md with the new application name and a revised AI Studio link.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pi-ai-studio",
+  "name": "pi-ai-studio-v2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "@google/genai": "^1.17.0"
+    "@google/genai": "^1.17.0",
+    "framer-motion": "^11.3.11"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
